name:                main
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable main
  main-is:             main.hs
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , time
                     , directory
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                     , OverloadedStrings
                     , RecordWildCards